--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -38,8 +38,8 @@
                         <%= link_to '', create_like_path(tweet), method: :post, class: "card-link far fa-thumbs-up" %>
                     <% end %>
                 <% end %>
-                <% if user_signed_in? && tweet.user_id 1= current_user.id %>
-                    <% link_to 'Follow', 
+                <% if user_signed_in? && tweet.user_id != current_user.id %>
+                    <%= link_to 'Follow', create_friend_path(tweet.user_id), method: :post %>
                 <% end %>
                 <%= link_to "#{time_ago_in_words(tweet.created_at)} ago", tweet_path(tweet) %>
 
