--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -10,7 +10,7 @@
 <% end %>
 
 <div class = "container">
-    <h3 class= "mb-4">Latest tweets</h3>
+    <h3 class= "my-4">Latest tweets</h3>
     <% @tweets.each do |tweet| %>
         <div class="card mb-3" style="width: 20 rem;">
             <div class="card-body">
