--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -11,13 +11,13 @@
 
 <div class = "container">
     <%= search_form_for @q do |f| %>
-        <div class="form-group">
-            <%= f.label :content_cont, 'Search for a tweet that contains'%>
-            <%= f.search_field :content_cont, class: 'form-control' %>
-        </div>
-        <%= f.submit %>
-    <% end %>
-
+    <div class="form-group">
+        <%= f.label :content_cont %>
+        <%= f.search_field :content_cont, class: 'form-control' %>
+    </div>
+    <%= f.submit %>
+    
+<% end %>
     <h3 class= "my-4">Latest tweets</h3>
     <% @tweets.each do |tweet| %>
         <div class="card mb-3" style="width: 20 rem;">
