--- a/app/views/tweets/hashtags.html.erb
+++ b/app/views/tweets/hashtags.html.erb
@@ -1,1 +1,12 @@
-<h3>Tweets with your #hashtag</h3>
+<div class="container">
+    <h3>Tweets with <%= @hashtag %></h3>
+    
+    <% @hashtag_tweets.each do |tweet| %>
+        <div class="card mb-3" style="width: 20 rem;">
+            <div class="card-body">
+                <h5 class="card-title"> <%= image_tag tweet.user_image_url, size: "40", class: "avatar mr-2" %><%= tweet.user %></h5>
+                <p class="card-text"><%= hashtag_filter(tweet.content) %></p>
+            </div>
+        </div>
+    <% end %>
+</div>
