--- a/app/views/tweets/hashtags.html.erb
+++ b/app/views/tweets/hashtags.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <h3>Tweets with <%= @hashtag %></h3>
+    <h3>Tweets with #<%= @hashtag %></h3>
     
     <% @hashtag_tweets.each do |tweet| %>
         <div class="card mb-3" style="width: 20 rem;">
