--- a/app/views/tweets/hashtags.html.erb
+++ b/app/views/tweets/hashtags.html.erb
@@ -1,19 +1,8 @@
 <div class="container">
     <h3>Tweets with #<%= @hashtag %></h3>
     
-    <% @hashtag_tweets.each do |tweet| %>
-        <div class="card mb-3" style="width: 20 rem;">
-            <div class="card-body">
-                <h5 class="card-title"> <%= image_tag tweet.user_image_url, size: "40", class: "avatar mr-2" %><%= tweet.user %></h5>
-                <p class="card-text"><%= hashtag_filter(tweet.content) %></p>
-            </div>
-            <% if tweet.retweet_id %>
-                <div class = "card card-body mb-2">
-                    <h5 class="card-title"><%= image_tag search_tweet(tweet).user_image_url, size: "40", class: "avatar mr-2" %><%= search_tweet(tweet).user %></h5>
-                    <p class="card-text"><%= hashtag_filter(search_tweet(tweet).content) %></p>
-                 </div>
-            <% end %>
-        </div>
+    <% @hashtag_tweets.each do |t| %>
+        <%= render 'tweet', tweet: t %>
     <% end %>
     <%= link_to "Go back", root_path %>
 </div>
